# LiveGalGame

./: .gitignore  README.md
.github/workflows/: desktop-build.yml  release.yml
app/: build.gradle.kts
desktop/: .npmrc  DEVELOPER_GUIDE.md  README.md  agent-dev.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  tailwind.config.js  test-db.js  vite.config.js
desktop/backend/: main.py
desktop/docs/: funasr-optimization.md  git-log-hhh2210.md  llm-architecture.puml
desktop/memory-service/: README.md  main.py  pyproject.toml
desktop/memory-service/app/: __init__.py  db.py  models.py  schemas.py
desktop/memory-service/app/crud/: events.py  profiles.py
desktop/memory-service/app/routes/: event_routes.py  health.py  profile_routes.py
desktop/scripts/: build-backend.js  complex-test-data.sql  dev-log.js  download-ggml-models.js  download-models.js  download_asr_model.py  download_funasr_model.py  ensure-port-free.js  generate-complex-review-data.js  insert-test-review-data.js  prebuild.js  prepare-python-env.js  research-whisper-cpp.md  setup-funasr.sh  setup-whisper-cpp.sh  test-desktop-capturer.js  test-funasr-integration.py  test-funasr-output.py  test-funasr.py  update-asr-model.js
desktop/spec/: UI_DESIGN_INDEX.md  audio-capture-tech-note.md  build-and-release.md  data-model.md  hud-ux.md  llm-integration.md  prd-desktop.md  privacy-and-permissions.md  tech-architecture.md  test-plan.md  ui-design-01-chat-window.md  ui-design-02-llm-config.md  (+3 more)
docs/: ci-debugging-guide.md
mobile/: LICENSE  settings.gradle.kts
(+167 files in other folders)
